# hakyll-nix-template

./: .dockerignore  .envrc  .ghci  .gitignore  CNAME  Dockerfile  README.md  atom.xml  default.nix  docker-compose.yml  flake.nix  haskell-overlay.nix  hello-world.html  hola-mundo.html  index.html  rss.xml  shell.nix  sitemap.xml
.github/workflows/: main.yml
css/: code.css  default.css
generator/: default.nix  hakyll-nix-template.cabal  hpkgs.nix  my-site.cabal  shell.nix
generator/src/: Main.hs  Slug.hs
nix/: default.nix  sources.json
src/: CNAME  _config.yaml  index.html
src/css/: article.css  default.css
src/js/: script.js
src/posts/: 2020-09-21-hello-world.md  2020-09-22-hola-mundo.md
src/templates/: default.html  post.html  sitemap.xml
ssg/: ssg.cabal
ssg/src/: Main.hs
