cabal-version:       2.4

name:                hakyll-nix-template
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable hakyll-site
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base == 4.*
                   , hakyll ^>= 4.13.3.0
                   , pandoc >= 2.0.5 && < 2.10
                   , text ^>= 1.2.4
                   , time >= 1.8 && < 1.10
  other-modules:     Slug
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
