cabal-version:       2.4

name:                ssg
version:             0.1.0.0
build-type:          Simple
license:             BSD-3-Clause
license-file:        LICENSE

executable hakyll-site
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base == 4.*
                   , hakyll ^>= 4.14
                   , pandoc
                   , text
                   , time
  other-modules:     Slug
  ghc-options:       -Wall -threaded
  default-language:  Haskell2010
